--- a/contact-us.html
+++ b/contact-us.html
@@ -153,7 +153,7 @@
                         </div>
                         <div class="main-detail">
                            <h4 class="iq-fw-8">Address</h4>
-                           <p>1234 North Avenue Luke Lane, South Bend, IN 360001</p>
+                           <p>3605 NE 73rd Pl, Seattle, WA - 98115 </p>
                         </div>
                      </div>
                      <div class="our-detail mb-4">
@@ -162,7 +162,7 @@
                         </div>
                         <div class="main-detail">
                            <h4 class="iq-fw-8">Email</h4>
-                           <p>xyz@gmail.com</p>
+                           <p>info@gaussiansolutions.com</p>
                         </div>
                      </div>
                      <div class="our-detail mb-4">
@@ -171,22 +171,22 @@
                         </div>
                         <div class="main-detail">
                            <h4 class="iq-fw-8">Call</h4>
-                           <p>+91 11233456</p>
+                           <p>+1 360 207 4159</p>
                         </div>
                      </div>
                      <ul class="list-inline mb-4">
-                        <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li>
-                        <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-twitter"></i></li>
-                        <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-linkedin"></i></li>
-                        <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-instagram"></i></li>
-                        <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-dribbble-square"></i></li>
-                        <li class="list-inline-item iq-fw-6"><a href="" class="text-gray"><i class="fab fa-pinterest-square"></i></li>
+                        <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li> -->
+                        <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-twitter"></i></li> -->
+                        <li class="list-inline-item iq-fw-6 mr-3"><a href="https://www.linkedin.com/company/gaussiansolutions/" class="text-gray"><i class="fab fa-linkedin"></i></li>
+                        <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-instagram"></i></li> -->
+                        <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-dribbble-square"></i></li> -->
+                        <!-- <li class="list-inline-item iq-fw-6"><a href="" class="text-gray"><i class="fab fa-pinterest-square"></i></li> -->
                      </ul>
                   </div>
                </div>
             </div>
          </section>
-         <section class="our-map pt-0">
+         <!-- <section class="our-map pt-0">
             <div class="container">
                <div class="row">
                   <div class="col-lg-12">
@@ -194,7 +194,7 @@
                   </div>
                </div>
             </div>
-         </section>
+         </section> -->
       </div>
       <!--=================================
       MAIN CONTENT -->
@@ -235,12 +235,12 @@
                   <div class="col-lg-6 col-md-6">
                      <h4 class="iq-fw-7 mb-4">Subscribe for Newsletter</h4>
                      <form>
-                        <input type="email" name="" placeholder="Enter Email" class="position-relative form-control d-inline-block subscription-email">
-                        <a href="" class="button subscription-button ">Sign Up</a>
+                        <input type="email" name="" placeholder="Enter Email" class="subscription-email position-relative form-control d-inline-block">
+                        <a href="" class="button subscription-button">Sign Up</a>
                      </form>
                      <ul class="list-inline mb-5">
-                        <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">0 123 456 789</span></li>
-                        <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">xyz@gmail.com</span></li>
+                        <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">+1 360 207 4159</span></li>
+                        <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">info@gaussiansolutions.com</span></li>
                      </ul>
                      <ul class="list-inline">
                         <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li>
@@ -258,7 +258,7 @@
                         <li class="list-inline-item r-font-12"><a href="privacy-policy.html" class="text-gray iq-fw-6">Privacy Policy</a></li>
                      </ul>
                   </div>
-                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Vizion All rights reserved 2019</a></div>
+                  <div class="col-auto r-font-12"><a href="" class="text-gray iq-fw-6">Gaussian Solutions - All rights reserved 2020</a></div>
                </div>
             </div>
             <!-- back-to-top -->
