--- a/index.html
+++ b/index.html
@@ -531,9 +531,9 @@
                         <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">info@gaussiansolutions.com</span></li>
                      </ul>
                      <ul class="list-inline">
-                        <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li>
-                        <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-twitter"></i></li>
-                        <li class="list-inline-item iq-fw-6"><a href="" class="text-gray"><i class="fab fa-linkedin"></i></li>
+                        <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li> -->
+                        <!-- <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-twitter"></i></li> -->
+                           <li class="list-inline-item iq-fw-6"><a href="https://www.linkedin.com/company/gaussiansolutions/" class="text-gray"><i class="fab fa-linkedin"></i></li>
                      </ul>
                   </div>
                </div>
