--- a/blog-details-left-sidebar.html
+++ b/blog-details-left-sidebar.html
@@ -290,7 +290,7 @@
                      </form>
                      <ul class="list-inline mb-5">
                         <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">0 123 456 789</span></li>
-                        <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">xyz@gmail.com</span></li>
+                        <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">info@gaussiansolutions.com</span></li>
                      </ul>
                      <ul class="list-inline">
                         <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li>
