--- a/blog-details-right-sidebar.html
+++ b/blog-details-right-sidebar.html
@@ -4,7 +4,7 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Vizion - Al/ML - Computer vizion Responsive HTML5 Template</title>
+      <title>Gaussian Solutions - AI, Computer vision in Smart Cities, Retail, Transportation, Airports</title>
       <!-- Favicon -->
       <link rel="shortcut icon" href="images/favicon.ico">
       <!-- Bootstrap CSS -->
@@ -291,7 +291,7 @@
                      </form>
                      <ul class="list-inline mb-5">
                         <li class="list-inline-item iq-fw-6 text-black"><i class="fas fa-phone"></i><span class="ml-2 text-gray">0 123 456 789</span></li>
-                        <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">xyz@gmail.com</span></li>
+                        <li class="list-inline-item ml-3 iq-fw-6 text-black"><i class="fas fa-envelope-open-text"></i><span class="ml-2 text-gray">info@gaussiansolutions.com</span></li>
                      </ul>
                      <ul class="list-inline">
                         <li class="list-inline-item iq-fw-6 mr-3"><a href="" class="text-gray"><i class="fab fa-facebook-f"></i></a></li>
