--- a/blog-details-left-sidebar.html
+++ b/blog-details-left-sidebar.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>Gaussian Solutions - AI, Computer vision in Smart Cities, Retail, Transportation, Airports</title>
       <!-- Favicon -->
-      <link rel="shortcut icon" href="images/favicon.ico">
+      <link rel="shortcut icon" href="images/about/gaussian_icon.jpg">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- Magnific Popup CSS-->
@@ -278,7 +278,7 @@
                      <h4 class="iq-fw-7 mb-3">Help</h4>
                      <ul class="d-block">
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Support</a></li>
-                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Faq's</a></li>
+                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">FAQs</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="contact-us.html" class="text-gray">Contact Us</a></li>
                      </ul>
                   </div>
