--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>Gaussian Solutions - AI, Computer vision in Smart Cities, Retail, Transportation, Airports</title>
       <!-- Favicon -->
-      <link rel="shortcut icon" href="images/favicon.ico">
+      <link rel="shortcut icon" href="images/about/gaussian_icon.jpg">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- Typography CSS -->
@@ -90,7 +90,7 @@
                <div class="row">
                   <div class="col-lg-6 col-md-12 col-sm-12 align-self-center">
                      <!-- <h1>10X ROI using Computer Vision, AI, and Machine Learning</h1> -->
-                     <h1>10X ROI</h1> <h2>using Computer Vision, AI, and Machine Learning</h2> 
+                     <h1> <span style="font-size: 120%;">10x</span> ROI</h1> <h2>using Computer Vision, AI, Machine Learning, and Analytics</h2> 
                      <p class="mb-5">Delivering faster, better, and efficient solutions for your business needs.</p>
                      <a href="" class="button mb-lg-0 mb-5">See Solutions</a>
                   </div>
@@ -135,7 +135,7 @@
                            <ul>
                               <li id="slide_1"><img src="images/about/05.jpg" class="img-fluid" alt="img" /></li>
                               <!-- <li id="slide_2"><img src="images/about/04.jpg" class="img-fluid" alt="img" /></li> -->
-                              <li id="slide_2"><img src="images/smart_city/pedestrian_bike_car.jpg" class="img-fluid" alt="img" /></li>                               
+                              <li id="slide_2"><img src="images/technology/traffic_detection.png" class="img-fluid" alt="img" /></li>                               
                               <li id="slide_3" class="active"><img src="images/technology/baggage_size.png" class="img-fluid" alt="img" /></li>
                               <li id="slide_4"><img src="images/drivers/annotated3.png" class="img-fluid" alt="img" /></li>
                            </ul>
@@ -149,7 +149,7 @@
                               <li class="text-left object-new">
                                  <a data-links-to="slide_1" class="one" href="#">
                                     <h3 class="iq-fw-8">Occupancy Analytics</h3>
-                                    <p>Optimize revenue, lower costs, by gaining who, how, and when your facility is used.</p>
+                                    <p>Increase revenue, lower costs, enhance customer comfort by gaining who, how, and when your facility is used.</p>
                                  </a>
                               </li>
                               <li class="object-new">
@@ -516,7 +516,7 @@
                      <h4 class="iq-fw-7 mb-3">Help</h4>
                      <ul class="d-block">
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Support</a></li>
-                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Faq's</a></li>
+                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">FAQs</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="contact-us.html" class="text-gray">Contact Us</a></li>
                      </ul>
                   </div>
