--- a/technology.html
+++ b/technology.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>Gaussian Solutions - AI, Computer vision in Smart Cities, Retail, Transportation, Airports</title>
       <!-- Favicon -->
-      <link rel="shortcut icon" href="images/favicon.ico">
+      <link rel="shortcut icon" href="images/about/gaussian_icon.jpg">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- Magnific Popup CSS-->
@@ -42,11 +42,11 @@
                      <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ml-auto">
                            <li class="nav-item">
-                              <a class="nav-link active" href="index.html">Home</a>
+                              <a class="nav-link" href="index.html">Home</a>
                            </li>
                            
                            <li class="nav-item">
-                              <a class="nav-link" href="technology.html">Technology</a>
+                              <a class="nav-link active" href="technology.html">Technology</a>
                            </li>
                            <li class="nav-item dropdown">
                               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -113,7 +113,7 @@
             <div class="container">
                <div class="row align-items-center">
                   <div class="col-lg-6">
-                     <img src="images/technology/Object-detection.png" class="img-fluid" alt="images">
+                     <img src="images/technology/Object-detection.png" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
@@ -130,7 +130,7 @@
             <div class="container">
                <div class="row flex-row-reverse align-items-center">
                   <div class="col-lg-6 text-right">
-                     <img src="images/technology/car_counting.PNG" class="img-fluid" alt="images">
+                     <img src="images/technology/car_counting.PNG" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
@@ -148,7 +148,7 @@
             <div class="container">
                <div class="row align-items-center">
                   <div class="col-lg-6">
-                     <img src="images/technology/license_recognition.png" class="img-fluid" alt="images">
+                     <img src="images/technology/license_recognition.png" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
@@ -157,7 +157,7 @@
                      </div>
                      <p class="iq-fw-6 mb-lg-0 mb-4">Our License Plate Recognition algorithm can detect state, license number, and expiry of the tags with greater accuracy than ever before. With the ability to run on a mobile device, and as a cloud algorithm,
                         we enable automatic gate openers at the parking garages. No more resident, and visitors decals necessary. Simply register the license number as approved, and we do the rest. In addition, we 
-                        enable smart parking enforcement solutions to monitor wider area faster, searching for stolen vehicles, etc.
+                        enable smart parking enforcement solutions to monitor wider area faster, search for stolen vehicles, etc.
                      </p>
                   </div>
                </div>
@@ -167,7 +167,7 @@
             <div class="container">
                <div class="row flex-row-reverse align-items-center">
                   <div class="col-lg-6 text-right">
-                     <img src="images/technology/baggage_size.png" class="img-fluid" alt="images">
+                     <img src="images/technology/baggage_size.png" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
@@ -186,7 +186,7 @@
             <div class="container">
                <div class="row align-items-center">
                   <div class="col-lg-6">
-                     <img src="images/technology/driver_license.png" class="img-fluid" alt="images">
+                     <img src="images/technology/driver_license.png" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
@@ -206,7 +206,7 @@
             <div class="container">
                <div class="row align-items-center flex-row-reverse">
                   <div class="col-lg-6 text-right">
-                     <img src="images/about/12.jpg" class="img-fluid" alt="images">
+                     <img src="images/about/12.jpg" class="img-fluid banner-rounded-circle" alt="images">
                   </div>
                   <div class="col-lg-6">
                      <div class="title-main mb-4">
@@ -251,7 +251,7 @@
                      <h4 class="iq-fw-7 mb-3">Help</h4>
                      <ul class="d-block">
                         <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Support</a></li>
-                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">Faq's</a></li>
+                        <li class="d-block  iq-fw-6 mb-2"><a href="" class="text-gray">FAQs</a></li>
                         <li class="d-block  iq-fw-6 mb-2"><a href="contact-us.html" class="text-gray">Contact Us</a></li>
                      </ul>
                   </div>
