--- a/comingsoon.html
+++ b/comingsoon.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>Gaussian Solutions - AI, Computer vision in Smart Cities, Retail, Transportation, Airports</title>
       <!-- Favicon -->
-      <link rel="shortcut icon" href="images/favicon.ico">
+      <link rel="shortcut icon" href="images/about/gaussian_icon.jpg">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- Magnific Popup CSS-->
